appId: com.sovranbitcoin
name: Receive Lightning With Note

---
- launchApp

- startRecording:
    path: './.maestro/receive/lightning-note-confirm-video'

- assertVisible: 'Receive'

- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_0'

- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_1'
- tapOn: 'Receive'

- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_3'
- tapOn: 'Fixed Amount'

- assertVisible: 'Select Amount'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_4'
- tapOn: '1'
- tapOn: '0'
- tapOn: '0'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_5'
- tapOn: 'Next'

- assertVisible: 'Add a note'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_6'
- tapOn:
    id: 'message-input'
- inputText: 'Test'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_7'
- hideKeyboard
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_8'
- tapOn: 'Confirm'

- assertVisible: 'Receive Bitcoin'
- assertVisible: 'Share'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_9'
- assertVisible: 'Funds Received'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-confirm-step_10'
# - stopRecording
