appId: com.sovranbitcoin
---
- launchApp

- runFlow:
    file: ./helper/terms.yml

# - startRecording:
#     path: './.maestro/onboarding/recover-account-video'

- assertVisible: 'Welcome to'
- assertVisible: 'Sovran'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/recover-account-step_1'
- tapOn: 'Next'

- assertVisible: 'BITCOIN THAT'
- assertVisible: 'FEELS LIKE CASH'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/recover-account-step_2'
- tapOn: 'Next'

- assertVisible: 'POWERED BY'
- assertVisible: 'NOSTR'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/recover-account-step_2'
- tapOn: 'Next'

- assertVisible: 'Create Sovran Profile'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/recover-account-step_3'
- tapOn: 'I already have a Sovran account'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/recover-account-step_1'

- assertVisible: 'Enter your Recovery Phrase'
- tapOn: 'Enter word 1 of 12'
- inputText: 'someone'
- tapOn: 'Next'
- inputText: 'achieve'
- tapOn: 'Next'
- inputText: 'include'
- tapOn: 'Next'
- inputText: 'cancel'
- tapOn: 'Next'
- inputText: 'dynamic'
- tapOn: 'Next'
- inputText: 'fork'
- tapOn: 'Next'
- inputText: 'mirror'
- tapOn: 'Next'
- inputText: 'banner'
- tapOn: 'Next'
- inputText: 'attend'
- tapOn: 'Next'
- inputText: 'desert'
- tapOn: 'Next'
- inputText: 'cannon'
- tapOn: 'Next'
- inputText: 'lyrics'
- tapOn: 'Next'

- hideKeyboard

- assertVisible: 'Add Mint'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/recover-account-step_10'
- tapOn:
    id: 'add-mint'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/recover-account-step_4'
- tapOn:
    id: 'add-mint-item-0'
- tapOn:
    id: 'add-mint-item-1'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/recover-account-step_5'
- tapOn:
    id: 'save-mints'

- assertVisible:
    text: 'Loading sat...'
    timeout: 100000

- assertVisible:
    text: 'Loading usd...'
    timeout: 100000

- assertVisible:
    text: 'Loading eur...'
    timeout: 100000

- assertVisible: 'BTC'
# - stopRecording
