appId: com.sovranbitcoin
name: Create Account

---
# - launchApp

- runFlow:
    file: ../helper/terms.yml

# - startRecording:
#     path: 'onboarding_create-account-video'
#     label: 'Onboarding'

- assertVisible: 'Welcome to'
- assertVisible: 'Sovran'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: 'maestro_onboarding_create-account-step_1'
- tapOn: 'Next'

- assertVisible: 'BITCOIN THAT'
- assertVisible: 'FEELS LIKE CASH'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_2'
- tapOn: 'Next'

- assertVisible: 'POWERED BY'
- assertVisible: 'NOSTR'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_3'
- tapOn: 'Next'

- assertVisible: 'Create Sovran Profile'
- tapOn: 'Your public profile name'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_4'
- inputText: 'Test'
- hideKeyboard
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_5'
- tapOn: 'Create Sovran Account'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_6'

- assertVisible: 'Your Recovery Phrase'
- copyTextFrom:
    id: 'mnemonic-word-2'
- evalScript: ${output.word2 = maestro.copiedText}
- copyTextFrom:
    id: 'mnemonic-word-5'
- evalScript: ${output.word5 = maestro.copiedText}
- copyTextFrom:
    id: 'mnemonic-word-11'
- evalScript: ${output.word11 = maestro.copiedText}
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_5'
- tapOn: "I've written it down"
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_6'
- tapOn: "Yes, I've written it down"

- assertVisible: 'Verify your Recovery Phrase'
- tapOn: 'Enter word 3'
- inputText: ${output.word2}
- tapOn: 'Next'
- inputText: ${output.word5}
- tapOn: 'Next'
- inputText: ${output.word11}
- tapOn: 'Next'

# - hideKeyboard
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_7'
# - tapOn: 'Verify'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_8'
- tapOn: 'Continue'

- extendedWaitUntil:
    visible: 'Processing'
    timeout: 100000

- extendedWaitUntil:
    visible: 'Profile'
    timeout: 100000

# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_9'

- extendedWaitUntil:
    visible: 'Add Mint'
    timeout: 100000

# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_10'
- tapOn:
    id: 'add-mint'
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_11'
- tapOn:
    id: 'add-mint-item-0'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_12'
- tapOn:
    id: 'save-mints'

- extendedWaitUntil:
    visible: 'Profile'
    timeout: 100000

# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_13'

- extendedWaitUntil:
    visible: 'Loading sat...'
    timeout: 100000

# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_14'

- extendedWaitUntil:
    visible: 'Complete'
    timeout: 100000
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_15'
# - tapOn: 'Complete'

- extendedWaitUntil:
    visible: '0'
    timeout: 100000
# - runFlow:
#     file: ../helper/screenshot.yml
#     env:
#       SCREENSHOT_PATH: './.maestro/onboarding/create-account-step_16'

# - stopRecording
