appId: com.sovranbitcoin
name: Receive Lightning Without Note

---
- launchApp

# - startRecording:
#     path: './.maestro/receive/lightning-note-skip-video'

- assertVisible: 'Receive'

- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-skip-step_1'
- tapOn: 'Receive'

- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-skip-step_3'
- tapOn: 'Fixed Amount'

- assertVisible: 'Select Amount'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-skip-step_4'
- tapOn: '1'
- tapOn: '0'
- tapOn: '2'
- tapOn: '3'
# 1023 is guarenteed to produce a lot of proofs because it doesn't evenly fit as a power of 2

- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-skip-step_5'
- tapOn: 'Next'

- assertVisible: 'Add a note'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-skip-step_6'
- tapOn: 'Skip'

- assertVisible: 'Receive Bitcoin'
- assertVisible: 'Share'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-skip-step_7'
- assertVisible: 'Funds Received'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/receive/lightning-note-skip-step_8'
# - stopRecording
